--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     --platinum:#E0E0E2;
     --chocolate:#5C1A1B;
 }
+
 body{
     min-height: 100vh;
     background-image: url("https://wallpaperaccess.com/full/794889.jpg");
@@ -18,6 +19,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     position: relative;
     overflow: hidden;
 }
@@ -38,9 +40,9 @@ nav ul
     display: flex;
     justify-content: center;
     align-items: center;
-    gap:3rem;
+    gap:3vw;
     list-style: none;
-    font-size: 2.5rem;
+    font-size: 3vw;
     color:var(--chocolate);
     font-weight: 700;
     
@@ -58,8 +60,25 @@ nav ul li a
 }
 #harry{
     width: 50%;
+    margin:auto;
 }
-#wand
-{
+
+audio{
     position: absolute;
+    bottom:2rem;
+}
+@media (max-width:520px) {
+    #harry{
+        width:80%;
+    }
+    nav
+    {
+        width:80%;
+
+    }
+    nav ul{
+        font-size: 5vw;
+    }
+    
+    
 }
