--- a/stylespell.css
+++ b/stylespell.css
@@ -34,7 +34,7 @@
 .book .btn
 {
     position: absolute;
-    top:80%;
+    top:70%;
     left:65%;
 }
 .book .spells .s
@@ -53,7 +53,7 @@
     width: 100%;
     text-align: center;
     font-size: 5vw;
-    margin: 1rem;
+    margin: 1rem auto;
     font-family: 'Dancing Script', cursive;
     color:rgb(36, 35, 35);
 }
@@ -61,12 +61,13 @@
 {
     
     text-align: center;
-    font-size: 2vw;
+    font-size: 1.1rem;
     font-family: 'Pacifico', cursive;
+    word-wrap: break-word;
 }
 .book .btn button
 {
-    width:25rem;
+    width:25vw;
     height: 5rem;
     font-size: 3vw;
     border: none;
@@ -80,7 +81,7 @@
 }
 img
 {
-    margin:1rem;
+    margin: 1rem auto;
     border-radius: 2rem;
     width: 100%;
 }
@@ -115,4 +116,13 @@ img
 
     
 }
+@media (max-width:705px) {
+    .book .spells .s h1
+    {
+        font-size: 7vw;
+    }
+    
+    
+}
+
 
