--- a/stylespell.css
+++ b/stylespell.css
@@ -52,16 +52,18 @@
     
     width: 100%;
     text-align: center;
-    font-size: 5vw;
+    font-size: 6vw;
     margin: 1rem auto;
     font-family: 'Dancing Script', cursive;
     color:rgb(36, 35, 35);
+    word-wrap: break-word;
 }
+
 .book .spells .s p
 {
     
     text-align: center;
-    font-size: 1.1rem;
+    font-size: 1.5rem;
     font-family: 'Pacifico', cursive;
     word-wrap: break-word;
 }
@@ -84,15 +86,23 @@ img
     margin: 1rem auto;
     border-radius: 2rem;
     width: 100%;
+    
 }
-.five
+#exe
+{
+    width:80%;
+    margin: 1rem auto;
+    border-radius: 2rem;
+    
+}
+/* .five
 {
     background-image: url("https://media.tenor.com/SdNvFkKzv4MAAAAC/expecto-patronum-harry-potter.gif");
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100% 80%;
     border-radius: 5rem;
-}
+} */
 
 @keyframes view {
     0%
@@ -116,13 +126,6 @@ img
 
     
 }
-@media (max-width:705px) {
-    .book .spells .s h1
-    {
-        font-size: 7vw;
-    }
-    
-    
-}
+
 
 
